# agrs

./: CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
agrs/: __init__.py  aggregation.py  client.py  config.py  indices.py  selection.py  utils.py
agrs/sources/: planetary_computer_source.py
examples/: 01_basic_sentinel2_usage.py  01_fractional_default_features.py  02_fractional_custom_fractions.py  03_features_and_bands_both.py
